tests/ui/unit_struct.stderr
error: unit structs are not supported.
 --> $DIR/unit_struct.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
