tests/ui/unit_struct.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
struct UnitStruct;

fn main() {}
